--- a/src/views/pages/dashboard/components/Dashboard.scss
+++ b/src/views/pages/dashboard/components/Dashboard.scss
@@ -295,3 +295,30 @@
 .boxShipHeader{
   color: #D50000;
 }
+
+.fourohfour{
+  background-color: #66CC66;
+  height: calc(100vh - 64px);
+  width: 100%;
+  .loadinggif{
+    background: url(http://i.imgur.com/uhHyYvP.gif) no-repeat center center fixed;
+    background-size: 100% auto; /* width and height, can be %, px or whatever. */
+    width: 100%;
+    height: 100%;
+  }
+  h1{
+    color: white;
+  }
+  .top{
+    font-size: 70px;
+    position: absolute;
+    top: 100px;
+    font-family: 'Roboto Mono', monospace;
+  }
+  .bottom{
+    font-size: 50px;
+    font-family: 'Indie Flower', cursive;
+    position: absolute;
+    bottom: 200px;
+  }
+}
