--- a/src/views/pages/dashboard/components/Dashboard.scss
+++ b/src/views/pages/dashboard/components/Dashboard.scss
@@ -322,3 +322,10 @@
     bottom: 200px;
   }
 }
+
+.portfolioDiv{
+  border-color: rgb(233, 233, 233);
+  border-radius: 0px;
+  border-style: solid;
+  border-width: 1px;
+}
