--- a/src/views/pages/connor/connor.scss
+++ b/src/views/pages/connor/connor.scss
@@ -23,6 +23,12 @@
     position: relative;
   }
 
+.logoentrance{
+  height: 90vh;
+  position: absolute;
+  z-index: 999;
+}
+
   .entrance {
     height: 100vh;
     background: linear-gradient(rgba(0, 0, 0, 0.19), rgba(0, 0, 0, 0.19)), url(https://i.imgur.com/E3So61q.jpg) no-repeat center center fixed;
