--- a/src/views/pages/landing2/professional.scss
+++ b/src/views/pages/landing2/professional.scss
@@ -1,3 +1,6 @@
+$header: 'Open Sans', sans-serif;
+$paragraph: 'Gentium Basic', serif;
+
 .noselect {
   -webkit-touch-callout: none; /* iOS Safari */
     -webkit-user-select: none; /* Safari */
@@ -27,19 +30,52 @@
     top: 0px;
     height: 64px;
     width: 100%;
-    z-index: 2;
+    z-index: 999;
     border-bottom-color: rgb(233, 233, 233);
     border-bottom-left-radius: 0px;
     border-bottom-right-radius: 0px;
     border-bottom-style: solid;
     border-bottom-width: 1px;
     .leftHeader{
+      cursor: pointer;
+      position: absolute;
       height: 100%;
       width: 100px;
       color: white;
       display: flex;
       align-items: center;
       justify-content: center;
+      z-index: 5;
+      img{
+        height: 50%;
+      }
+    }
+    .rightHeader{
+      position: absolute;
+      right: 10px;
+      height: 100%;
+      width: 400px;
+      color: white;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      z-index: 5;
+      display: flex;
+      align-items: center;
+      justify-content: flex-end;
+      h3{
+        width: 90px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-wrap: nowrap;
+        cursor: pointer;
+        color: white;
+        font-size: 1.4em;
+        font-family: 'Doris', sans-serif;
+        }
+      }
+
     }
   }
 
@@ -54,7 +90,7 @@
       height: 100vh;
       width: 100%;
       top: 0px;
-      background: linear-gradient(rgba(0, 0, 0, 0.19), rgba(0, 0, 0, 0.19)), url(https://i.imgur.com/C7wpT4M.jpg) no-repeat center center fixed;
+      background: linear-gradient(rgba(0, 0, 0, 0.19), rgba(0, 0, 0, 0.19)), url(https://i.imgur.com/g8hXy7G.jpg) no-repeat center center fixed;
       background-color: black;
       -webkit-background-size: cover;
       -moz-background-size: cover;
@@ -74,7 +110,7 @@
       h1{
         font-size: 8em;
         color: white;
-        font-family: 'Shadows Into Light', cursive;
+        font-family: 'Shadows Into Light Two', cursive;
       }
     }
     .headerWrapper{
@@ -83,11 +119,15 @@
       justify-content: center;
       flex-direction: column;
       height: 100%;
+      .centerLogo{
+        height: 30vh;
+      }
       .nameWrapper{
         h1 {
+          cursor: default;
           font-size: 8em;
           color: white;
-          font-family: 'Shadows Into Light', cursive;
+          font-family: 'Shadows Into Light Two', cursive;
           -webkit-animation: fade 2s ease-out forwards;
         }
       }
@@ -137,78 +177,268 @@
       }
     }
   }
+
+
+
+
+
   .pageTwo{
-    background-color: black;
+    position: relative;
+    background-color: #FFF8FF;
+    height: 100vh !important;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    .portfolioWrapper{
+      background: url(https://i.imgur.com/LNHhi78.png) no-repeat center center;
+      position: absolute;
+      width: 100%;
+      height: 100vh;
+      overflow: hidden;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      .headerWrapper{
+        width: 100%;
+        height: 100px;
+        text-align: center;
+        position: absolute;
+        top: 64px;
+        background-color: black;
+        opacity: .7;
+      }
+      .paraWrapper{
+        position: absolute;
+        right: 10px;
+        width: 40%;
+        background-color: black;
+        opacity: .5;
+        padding: 50px;
+        border: 2px solid;
+        border-radius: 10px;
+      }
+      h1{
+        margin-top: 24px;
+        margin-left: 20px;
+        font-style: normal;
+        font-variant-ligatures: normal;
+        font-variant-caps: normal;
+        font-variant-numeric: normal;
+        font-weight: 800;
+        font-stretch: normal;
+        font-size: 100px;
+        line-height: 42px;
+        font-family: "Open Sans", sans-serif;
+        font-weight: 800;
+        text-transform: uppercase;
+        text-align: left;
+        letter-spacing: 1px;
+        color: white;
+        opacity: 1;
+
+      }
+      p{
+        font-family: 'Dosis', sans-serif;
+        font-size: 30px;
+        color: white;
+      }
+
+      }
+    }
+
+
+
+  .pageThree{
+    position: relative;
+    height: 100vh;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: nowrap;
+    .coinRexLogo{
+      position: absolute;
+      width: 70%;
+      left: 0px;
+      bottom: 0px;
+      z-index: 5;
+
+    }
+    $color: #1A237E;
+    .s1{
+      position: relative;
+      cursor: pointer;
+      width: 50%;
+      height: 100%;
+      background-color: black;
+
+      a{
+        position: absolute !important;
+        width: 100% !important;
+        height: 50% !important;
+        margin: 0px !important;
+        padding: 0px !important;
+      }
+      .head{
+        z-index: 6;
+        position: absolute;
+        top: 40%;
+        width: auto;
+        text-align: center;
+        h1, h2, h3{
+          color: white !important;
+          font-family: Play, sans-serif;
+        }
+        h1{
+          font-size: 6em;
+          height: 73px;
+        }
+        h2{
+          font-size: 3em;
+          height: 40px;
+        }
+        h3{
+          font-size: 1em;
+        }
+      }
+    }
+
+    .s2{
+      position: relative;
+      cursor: pointer;
+      width: 50%;
+      height: 100%;
+      background-color: $color;
+      overflow: hidden;
+      img{
+        position: absolute;
+        bottom: 0px;
+        left: 0px;
+        height: 100vh;
+      }
+      a{
+        position: absolute !important;
+        width: 100% !important;
+        height: 50% !important;
+        margin: 0px !important;
+        padding: 0px !important;
+      }
+      .head{
+        z-index: 6;
+        position: absolute;
+        top: 40%;
+        width: auto;
+        text-align: center;
+        h1, h2, h3{
+          color: white !important;
+          font-family: Play, sans-serif;
+        }
+        h1{
+          font-size: 6em;
+          height: 73px;
+        }
+        h2{
+          font-size: 3em;
+          height: 40px;
+        }
+        h3{
+          font-size: 1em;
+        }
+      }
+    }
+
+  }
+
+  .pageFour{
+    position: relative;
+    background-color: orange;
     height: 100vh;
     width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-wrap: nowrap;
-    .portfolioWrapper{
-      position: relative;
-      width: 25vw;
+    .map{
+      position: absolute;
       height: 100vh;
-      overflow: hidden;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-
-      .portfolio{
-        position: relative;
-        width: 25vw;
-        height: 100vh;
-        margin: 0px;
-        cursor: pointer;
-        transition: all 1s ease;
-        -moz-transition: all 2s ease;
-        -ms-transition: all 2s ease;
-        -webkit-transition: all 2s ease;
-        -o-transition: all 2s ease;
-        &:hover{
-          transform: scale(1.1);
-          -moz-transform: scale(1.1);
-          -webkit-transform: scale(1.1);
-          -o-transform: scale(1.1);
-          -ms-transform: scale(1.1); /* IE 9 */
-        }
-      }
-
-      .portfolio1{
-        background: linear-gradient(rgba(0, 0, 0, 0.19), rgba(0, 0, 0, 0.19)), url(https://i.imgur.com/75qGdga.jpg) no-repeat center center fixed;
-        width: 105%;
-        height: 100vh;
-      }
-
-      .portfolio2{
-        background: linear-gradient(rgba(0, 0, 0, 0.19), rgba(0, 0, 0, 0.19)), url(https://i.imgur.com/ZXWieu2.jpg) no-repeat center center fixed;
-        width: 105%;
-        height: 100vh;
-      }
-
-      .portfolio3{
-        background: linear-gradient(rgba(0, 0, 0, 0.19), rgba(0, 0, 0, 0.19)), url(https://i.imgur.com/Jk7sGYq.jpg) no-repeat center center fixed;
-        width: 105%;
-        height: 100vh;
-      }
-
-      .portfolio4{
-        background: linear-gradient(rgba(0, 0, 0, 0.19), rgba(0, 0, 0, 0.19)), url(https://i.imgur.com/kF8hlih.jpg) no-repeat center center  fixed;
-        width: 105%;
-        height: 100vh;
-      }
-
-      .header{
-        position: absolute;
-        text-align: center;
-        width: 100%;
-        h1, h2{
-          color: white;
-        }
-      }
+      width: 100%;
+      background-color: #29B6F6;
     }
 
   }
+
+  .pageFive{
+    position: relative;
+    background-color: blue;
+    height: 100vh;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: nowrap;
+
+    .svg-wrapper {
+      cursor: pointer;
+      height: 60px;
+    	margin: 0 auto;
+      position: absolute;
+      top: 50%;
+      transform: translateY(-50%);
+      width: 320px;
+      text-align: center;
+    }
+
+    .shape {
+      fill: transparent;
+      stroke-dasharray: 140 540;
+      stroke-dashoffset: -474;
+      stroke-width: 8px;
+      stroke: #19f6e8;
+    }
+
+    .text {
+      color: #fff;
+      font-family: 'Roboto Condensed';
+      font-size: 22px;
+      letter-spacing: 8px;
+      line-height: 32px;
+      position: relative;
+      top: -48px;
+    }
+
+    @keyframes draw {
+      0% {
+        stroke-dasharray: 140 540;
+        stroke-dashoffset: -474;
+        stroke-width: 8px;
+      }
+      100% {
+        stroke-dasharray: 760;
+        stroke-dashoffset: 0;
+        stroke-width: 2px;
+      }
+    }
+
+    .svg-wrapper:hover .shape {
+      -webkit-animation: 0.5s draw linear forwards;
+      animation: 0.5s draw linear forwards;
+    }
+
+  }
+
+
+@keyframes inPut {
+  from {
+		transform: rotate(0deg)
+		           translate( calc(-20vh) )
+		           rotate(0deg);
+	}
+	to {
+		transform: rotate(360deg)
+		           translate( calc(-20vh) )
+		           rotate(-360deg);
+	}
 }
 
 
