new map & pins - xoxo

--- a/src/views/pages/landing2/professional.scss
+++ b/src/views/pages/landing2/professional.scss
@@ -271,7 +271,7 @@ $paragraph: 'Gentium Basic', serif;
       cursor: pointer;
       width: 50%;
       height: 100%;
-      background-color: black;
+      background-color: #FFECB3;
 
       a{
         position: absolute !important;
