--- a/src/views/pages/landing2/professional.scss
+++ b/src/views/pages/landing2/professional.scss
@@ -267,13 +267,14 @@ $paragraph: 'Gentium Basic', serif;
       z-index: 5;
 
     }
-    $color: #1A237E;
+    $leftColor: #432968;
+    $color: #121858;
     .s1{
       position: relative;
       cursor: pointer;
       width: 50%;
       height: 100%;
-      background-color: #FFECB3;
+      background-color: $leftColor;
       .stacks{
         width: 100%;
         position: absolute;
@@ -369,21 +370,24 @@ $paragraph: 'Gentium Basic', serif;
       position: absolute;
       height: 100vh;
       width: 100%;
-      background-color: #29B6F6;
+      background: linear-gradient(90deg, #1976D2, #BBDEFB);
     }
 
   }
 
   .pageFive{
     position: relative;
-    background-color: blue;
-    height: 100vh;
+    height: 30vh;
     width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-wrap: nowrap;
-
+    .mapWrapper{
+      width: 100%;
+      z-index: 999;
+      background-color: red;
+    }
     .svg-wrapper {
       cursor: pointer;
       height: 60px;
