--- a/src/views/pages/landing2/professional.scss
+++ b/src/views/pages/landing2/professional.scss
@@ -11,6 +11,13 @@ $paragraph: 'Gentium Basic', serif;
                                   supported by Chrome and Opera */
 }
 
+.topBar{
+  position: absolute !important;
+  top: 40px !important;
+  width: 2500px !important;
+  background: none !important;
+  border: 0px !important;
+}
 
 .portfolioBooty{
   opacity: 0;
@@ -25,17 +32,15 @@ $paragraph: 'Gentium Basic', serif;
     background-color: white;
     z-index: 2;
   }
+
   .navbarTopBefore{
     position: fixed !important;
     top: 0px;
-    height: 64px;
+    height: 70px;
     width: 100%;
     z-index: 999;
-    border-bottom-color: rgb(233, 233, 233);
-    border-bottom-left-radius: 0px;
-    border-bottom-right-radius: 0px;
-    border-bottom-style: solid;
-    border-bottom-width: 1px;
+
+
     .leftHeader{
       cursor: pointer;
       position: absolute;
@@ -47,7 +52,7 @@ $paragraph: 'Gentium Basic', serif;
       justify-content: center;
       z-index: 5;
       img{
-        height: 50%;
+        height: 100%;
       }
     }
     .rightHeader{
@@ -60,9 +65,6 @@ $paragraph: 'Gentium Basic', serif;
       align-items: center;
       justify-content: center;
       z-index: 5;
-      display: flex;
-      align-items: center;
-      justify-content: flex-end;
       h3{
         width: 90px;
         display: flex;
@@ -165,17 +167,11 @@ $paragraph: 'Gentium Basic', serif;
         }
       }
       .socialWrapper{
-        margin-top: 50px;
-        .fa {
-          margin-left: 10px;
-          margin-right: 10px;
-          color: #BDBDBD;
-          cursor: pointer;
-          &:hover{
-            color: #F5F5F5;
-            transform: scale(1.1);
-          }
-        }
+        width: 100%;
+        height: 74px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
       }
     }
   }
@@ -192,61 +188,11 @@ $paragraph: 'Gentium Basic', serif;
     display: flex;
     justify-content: center;
     align-items: center;
-    .portfolioWrapper{
-      background: url(https://i.imgur.com/LNHhi78.png) no-repeat center center;
-      position: absolute;
-      width: 100%;
-      height: 100vh;
-      overflow: hidden;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      .headerWrapper{
-        width: 100%;
-        height: 100px;
-        text-align: center;
-        position: absolute;
-        top: 64px;
-        background-color: black;
-        opacity: .7;
-      }
-      .paraWrapper{
-        position: absolute;
-        right: 10px;
-        width: 40%;
-        background-color: black;
-        opacity: .5;
-        padding: 50px;
-        border: 2px solid;
-        border-radius: 10px;
-      }
-      h1{
-        margin-top: 24px;
-        margin-left: 20px;
-        font-style: normal;
-        font-variant-ligatures: normal;
-        font-variant-caps: normal;
-        font-variant-numeric: normal;
-        font-weight: 800;
-        font-stretch: normal;
-        font-size: 100px;
-        line-height: 42px;
-        font-family: "Open Sans", sans-serif;
-        font-weight: 800;
-        text-transform: uppercase;
-        text-align: left;
-        letter-spacing: 1px;
-        color: white;
-        opacity: 1;
+    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(https://i.imgur.com/C7wpT4M.jpg) no-repeat center center fixed;
+    h1, p {
+      color: white;
+    }
 
-      }
-      p{
-        font-family: 'Dosis', sans-serif;
-        font-size: 30px;
-        color: white;
-      }
-
-      }
     }
 
 
