--- a/src/views/pages/landing2/entrance.scss
+++ b/src/views/pages/landing2/entrance.scss
@@ -5,7 +5,7 @@
   padding: 0;
   overflow-x: hidden;
   overflow-y: hidden;
-  background-color: black;
+  background-color: #253A3E;
 }
 
 .landingBody{
