--- a/src/views/pages/landing2/professional.scss
+++ b/src/views/pages/landing2/professional.scss
@@ -23,6 +23,7 @@ $paragraph: 'Gentium Basic', serif;
   opacity: 0;
   min-height: 100vh;
   animation: fadeIn 2s ease forwards;
+  background-color: #253A3E;
 
   .navbarTop{
     position: fixed !important;
@@ -87,13 +88,14 @@ $paragraph: 'Gentium Basic', serif;
     width: 100%;
     overflow-x: hidden;
     overflow-y: hidden;
+    background-color: #253A3E;
     .background{
       position: absolute;
       height: 100vh;
       width: 100%;
       top: 0px;
       background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(https://i.imgur.com/g8hXy7G.jpg) no-repeat center center fixed;
-      background-color: black;
+      background-color:#4f717a;
       -webkit-background-size: cover;
       -moz-background-size: cover;
       -o-background-size: cover;
@@ -188,9 +190,54 @@ $paragraph: 'Gentium Basic', serif;
     display: flex;
     justify-content: center;
     align-items: center;
-    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(https://i.imgur.com/C7wpT4M.jpg) no-repeat center center fixed;
-    h1, p {
+    background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url(https://i.imgur.com/MqW82Wr.jpg) no-repeat center center fixed;
+    background-size: auto 100%;
+    background-color: white;
+    h1, p, h2 {
       color: white;
+      width: 100%;
+      text-align: left;
+    }
+    h1{
+      font: italic 900 13vw/90px 'Playfair Display', Georgia, serif;
+    }
+    h2{
+      font: italic 900 8vw/90px 'Playfair Display', Georgia, serif;
+    }
+    p{
+        margin-top: 15px;
+        font-family: Neuton, serif;
+        font-size: 4vw;
+        font-style: italic;
+        font-weight: normal;
+    }
+    @media screen and (min-width: 1100px) {
+      p {
+        font-size: 43px;
+      }
+      h1{
+        font: italic 900 9vw/90px 'Playfair Display', Georgia, serif;
+      }
+      h2{
+        font: italic 900 6vw/90px 'Playfair Display', Georgia, serif;
+      }
+    }
+    .headerWrapper{
+      position: absolute;
+      top: 15%;
+      left: 0px;
+      width: 100%;
+      padding-right: 60%;
+      padding-left: 30px;
+    }
+    .paraWrapper{
+      position: absolute;
+      bottom: 15%;
+      right: 0px;
+      width: 100%;
+      padding-left: 60%;
+      padding-right: 30px;
+
     }
 
     }
@@ -213,7 +260,7 @@ $paragraph: 'Gentium Basic', serif;
       z-index: 5;
 
     }
-    $leftColor: #432968;
+    $leftColor: #212121;
     $color: #121858;
     .s1{
       position: relative;
